fixes overflow problem

--- a/app/assets/stylesheets/layouts/user-show.scss
+++ b/app/assets/stylesheets/layouts/user-show.scss
@@ -65,6 +65,7 @@
 		}
 
 		.left-info {
+			float: left;
 
 			ul {
 		    top: 16px;
